--- a/scss/layout/_feedback.scss
+++ b/scss/layout/_feedback.scss
@@ -14,6 +14,9 @@
         }
       }
       .swiper {
+        & .swiper-wrapper {
+          height: auto;
+        }
         & .feedback-pagination {
           position: absolute;
           text-align: center;
