--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -159,6 +159,11 @@
         &:nth-child(2) {
           ul {
             padding-bottom: 30px;
+            li {
+              &:last-child {
+                display: none;
+              }
+            }
           }
         }
         &:nth-child(3) {
@@ -457,7 +462,7 @@
             background: #919191;
             border-radius: 50%;
             position: absolute;
-            top: -4px;
+            top: 0;
             bottom: 0;
             left: -15px;
             margin: auto;
