--- a/scss/layout/_news.scss
+++ b/scss/layout/_news.scss
@@ -342,6 +342,11 @@
           width: 100% !important;
           margin-left: 0 !important;
           margin-right: 0 !important;
+          & > * {
+            width: 100% !important;
+            margin-left: 0 !important;
+            margin-right: 0 !important;
+          }
         }
       }
       &:nth-child(2) {
@@ -674,6 +679,8 @@
             flex-wrap: wrap;
           }
           & .tablist-inner-body {
+            width: 33.333%;
+            height: auto;
             @include max(1024px) {
               width: 50%;
             }
@@ -713,10 +720,21 @@
             margin-bottom: 10px;
           }
           & .text-small {
+            @include lc(3);
+            overflow: hidden;
+            & * {
+              width: 100% !important;
+              margin-left: 0 !important;
+              margin-right: 0 !important;
+              padding-left: 0 !important;
+              padding-right: 0 !important;
+              font-size: 14px !important;
+              color: #858585 !important;
+              font-weight: 400 !important;
+            }
             p {
               font-size: 14px;
               color: #858585;
-              @include lc(3);
             }
           }
           & .tablist-swiper-next {
