--- a/assets/icon/iconfont/style.css
+++ b/assets/icon/iconfont/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconfont';
-  src:  url('fonts/iconfont.eot?uc8p83');
-  src:  url('fonts/iconfont.eot?uc8p83#iefix') format('embedded-opentype'),
-    url('fonts/iconfont.ttf?uc8p83') format('truetype'),
-    url('fonts/iconfont.woff?uc8p83') format('woff'),
-    url('fonts/iconfont.svg?uc8p83#iconfont') format('svg');
+  src:  url('fonts/iconfont.eot?sl4bzp');
+  src:  url('fonts/iconfont.eot?sl4bzp#iefix') format('embedded-opentype'),
+    url('fonts/iconfont.ttf?sl4bzp') format('truetype'),
+    url('fonts/iconfont.woff?sl4bzp') format('woff'),
+    url('fonts/iconfont.svg?sl4bzp#iconfont') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.ic-right-arrow:before {
+  content: "\e90a";
+}
 .ic-line:before {
   content: "\e908";
 }
