--- a/css/style.css
+++ b/css/style.css
@@ -662,7 +662,7 @@ table {
       width: 250px;
       background: #fff;
       left: 0;
-      top: 46px;
+      top: 45px;
       margin: 0;
       padding: 20px;
       border-top: 4px solid #002485;
@@ -781,7 +781,8 @@ table {
       margin-right: 10px; }
   .header-navbar-language {
     padding: 1.25rem 0;
-    margin-right: 16px; }
+    margin-right: 16px;
+    display: none; }
     @media screen and (max-width: 68.75rem) {
       .header-navbar-language {
         margin: unset;
@@ -2330,14 +2331,16 @@ input::-webkit-input-placeholder {
   padding-top: 150px; }
   @media screen and (max-width: 1100px) {
     .history-inner-right {
-      padding-top: 60px; } }
+      padding-top: 100px; } }
   @media screen and (max-width: 600px) {
     .history-inner-right {
       padding-top: 0; } }
-  .history-inner-right.vision-mission .history-inner-info {
-    margin-bottom: 95px; }
-    .history-inner-right.vision-mission .history-inner-info h2 {
-      color: #002485; }
+  .history-inner-right.vision-mission {
+    padding-top: 30px; }
+    .history-inner-right.vision-mission .history-inner-info {
+      margin-bottom: 95px; }
+      .history-inner-right.vision-mission .history-inner-info h2 {
+        color: #002485; }
   .history-inner-right.commitment-quality .history-inner-info {
     margin-bottom: 40px; }
     .history-inner-right.commitment-quality .history-inner-info h2 {
@@ -2373,6 +2376,8 @@ input::-webkit-input-placeholder {
   position: relative; }
   .history-inner-prove .prove-img {
     position: relative; }
+    .history-inner-prove .prove-img img {
+      max-height: 195px; }
     .history-inner-prove .prove-img::before {
       content: "";
       position: absolute;
@@ -2397,6 +2402,9 @@ input::-webkit-input-placeholder {
     @media screen and (max-width: 600px) {
       .history-inner-prove .prove-text p {
         font-size: 14px; } }
+
+.history-inner-swiper .swiper-wrapper {
+  height: auto; }
 
 .history-inner-pagination {
   bottom: 0 !important; }
@@ -2431,12 +2439,22 @@ input::-webkit-input-placeholder {
   display: flex;
   align-items: center;
   margin-bottom: 40px; }
+  @media screen and (max-width: 700px) {
+    .history-inner-list {
+      flex-wrap: wrap; } }
   .history-inner-list .history-introduce {
     position: relative; }
     .history-inner-list .history-introduce:nth-child(1) {
       margin-right: 20px; }
+      @media screen and (max-width: 700px) {
+        .history-inner-list .history-introduce:nth-child(1) {
+          margin-right: 0;
+          margin-bottom: 65px; } }
     .history-inner-list .history-introduce:nth-child(2) {
       margin-left: 20px; }
+      @media screen and (max-width: 700px) {
+        .history-inner-list .history-introduce:nth-child(2) {
+          margin-left: 0; } }
     .history-inner-list .history-introduce .history-strategy {
       padding: 30px;
       padding-top: 80px;
@@ -2476,6 +2494,15 @@ input::-webkit-input-placeholder {
   padding: 30px;
   border-radius: 20px;
   background: #f1f8ff; }
+  @media screen and (max-width: 700px) {
+    .history-inner-strategy {
+      flex-wrap: wrap; } }
+  @media screen and (max-width: 700px) {
+    .history-inner-strategy .history-inner-text {
+      width: 100%; } }
+  @media screen and (max-width: 700px) {
+    .history-inner-strategy .history-inner-text:nth-child(1) {
+      margin-bottom: 20px; } }
   .history-inner-strategy .history-inner-text .item-title {
     margin-bottom: 10px; }
     .history-inner-strategy .history-inner-text .item-title h4 {
@@ -2515,14 +2542,34 @@ input::-webkit-input-placeholder {
         flex-direction: column !important; } }
     .history-time-row.border {
       padding-top: 0; }
+      .history-time-row.border:nth-child(3) div.history-time-form:nth-child(2)::after {
+        background-color: #00c86b; }
+      .history-time-row.border:nth-child(4) div.history-time-form:nth-child(2)::after {
+        background-color: #ffc107; }
+      .history-time-row.border:nth-child(6) div.history-time-form:nth-child(2)::after {
+        background-color: #00c86b; }
+      .history-time-row.border:nth-child(8) div.history-time-form:nth-child(2)::after {
+        background-color: #ffc107; }
+      .history-time-row.border:nth-child(9) div.history-time-form:nth-child(2)::after {
+        background-color: #00c86b; }
       .history-time-row.border .history-time-form:nth-child(1) {
         padding-top: 30px; }
       .history-time-row.border .history-time-form:nth-child(2) {
         padding-top: 30px; }
         .history-time-row.border .history-time-form:nth-child(2)::before {
           height: 100%; }
-        .history-time-row.border .history-time-form:nth-child(2)::after {
-          display: none; }
+      .history-time-row.border:nth-child(even) .history-time-form:nth-child(2)::after {
+        content: "";
+        width: 14px;
+        height: 14px;
+        top: -8px;
+        right: unset;
+        left: -6px;
+        z-index: 2;
+        border: 0;
+        position: absolute;
+        border-radius: 50%;
+        background-color: #69a1ff; }
       .history-time-row.border:nth-child(odd) {
         flex-direction: row-reverse; }
         .history-time-row.border:nth-child(odd) .history-time-form:nth-child(2) {
@@ -2532,20 +2579,23 @@ input::-webkit-input-placeholder {
           .history-time-row.border:nth-child(odd) .history-time-form:nth-child(2)::before {
             right: 0;
             left: unset; }
+          .history-time-row.border:nth-child(odd) .history-time-form:nth-child(2)::after {
+            content: "";
+            width: 14px;
+            height: 14px;
+            top: -8px;
+            right: -6px;
+            left: unset;
+            z-index: 2;
+            border: 0;
+            position: absolute;
+            border-radius: 50%;
+            background-color: #69a1ff; }
         .history-time-row.border:nth-child(odd) div.history-time-year::before {
-          left: 89px;
-          right: unset; }
+          left: 89px; }
         .history-time-row.border:nth-child(odd) div.history-time-year h3 {
           left: 0;
           right: unset; }
-      .history-time-row.border:nth-child(3) div.history-time-year::before {
-        background-color: #ffc107; }
-      .history-time-row.border:nth-child(4) div.history-time-year::before {
-        background-color: #428dff; }
-      .history-time-row.border:nth-child(6) div.history-time-year::before {
-        background-color: #428dff; }
-      .history-time-row.border:nth-child(7) div.history-time-year::before {
-        background-color: #ffc107; }
       .history-time-row.border:nth-child(9) .history-time-form:nth-child(2) {
         border-bottom: transparent; }
       .history-time-row.border:nth-child(9) div.history-time-year::before {
@@ -2595,6 +2645,8 @@ input::-webkit-input-placeholder {
       .history-time-form:nth-child(2) .history-time-img {
         width: 25%;
         margin-bottom: 70px; }
+        .history-time-form:nth-child(2) .history-time-img img {
+          height: auto; }
       .history-time-form:nth-child(2) .history-time-year h3 {
         position: absolute;
         bottom: -9px;
@@ -2608,7 +2660,7 @@ input::-webkit-input-placeholder {
         background: #00c86b; }
   .history-time-year {
     width: 100%; }
-    .history-time-year::before {
+    .history-time-year:first-child::before {
       content: "";
       width: 14px;
       height: 14px;
@@ -2710,6 +2762,9 @@ input::-webkit-input-placeholder {
   display: flex;
   align-items: center;
   transform: rotate(45deg); }
+
+.history-commit-content-img img {
+  height: auto; }
 
 .history-commit-content h3 {
   font-weight: 700;
