--- a/scss/layout/_history.scss
+++ b/scss/layout/_history.scss
@@ -8,7 +8,7 @@
   }
   &-inner {
     &-col {
-      @include max(1023px) 
+      @include max(1023px){
         width: 100%;
       }
       &:nth-child(1) {
